--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/register/register.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/register/register.component.html
@@ -1,1 +1,24 @@
-<p>register works!</p>
+<body>
+  <div class="parent">
+    <div class="div1">
+      <div class="card">
+        <div class="card-title">Registration</div>
+        <div class="card-body">
+          <form>
+            Full name:<br />
+            <input type="text" name="name" required /><br />
+            Email:<br />
+            <input type="e" name="name" required /><br />
+            Password:<br />
+            <input type="password" name="name" required /><br />
+          </form>
+        </div>
+        <div class="card-link">
+          <a routerLink="/login">
+            <i class="fas fa-chevron-circle-right"></i> Click here to login
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
