--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/app.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/app.component.html
@@ -1,13 +1,12 @@
-
 <div class="content" role="main">
-      <div class="topnav" id="myTopnav">
-          <a routerLink="/home" class="active">Home</a>
-          <a href="#Register">Register</a>
-          <a href="#Login">Login</a>
-          <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+  <div class="topnav" id="myTopnav">
+    <a routerLink="/home" class="active">Home</a>
+    <a routerLink="/register">Register</a>
+    <a routerLink="/login">Login</a>
+    <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a> -->
-        </div>
+  </div>
 </div>
 
 <router-outlet></router-outlet>
