--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/home/home.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/home/home.component.html
@@ -1,30 +1,31 @@
 <body>
-    <div class="parent">
-        <div class="div1">
-                <div class="card">
-                        <div class="card-title">Login</div>
-                        <div class="card-body">Returning user? Click here to login to your account<br><br></div>
-                        <div class="card-link">
-                                <a routerLink="/home">
-                                       <i class="fas fa-chevron-circle-right"></i> Click here to login
-                                </a>
-                        </div>
-                </div>
+  <div class="parent">
+    <div class="div1">
+      <div class="card">
+        <div class="card-title">Login</div>
+        <div class="card-body">
+          Returning user? Click here to login to your account<br /><br />
         </div>
-        <div class="div2">
-                <div class="card">
-                        <div class="card-title">View all workouts</div>
-                        <div class="card-body">Any user can check out all of the personal user workouts.<br> Workouts can vary from skateboarding to running!</div>
-                             <div class="card-link">
-                                 <a routerLink="/home">
-                                        <i class="fas fa-chevron-circle-right"></i> Click here to view them
-                                 </a>
-                            </div>
-                </div>
+        <div class="card-link">
+          <a routerLink="/login">
+            <i class="fas fa-chevron-circle-right"></i> Click here to login
+          </a>
         </div>
-    </div> 
+      </div>
+    </div>
+    <div class="div2">
+      <div class="card">
+        <div class="card-title">View all workouts</div>
+        <div class="card-body">
+          Any user can check out all of the personal user workouts.<br />
+          Workouts can vary from skateboarding to running!
+        </div>
+        <div class="card-link">
+          <a routerLink="/home">
+            <i class="fas fa-chevron-circle-right"></i> Click here to view them
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
-
-
-
-
