added material design

--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/app.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/app.component.html
@@ -3,10 +3,13 @@
     <a routerLink="/home" class="active">Home</a>
     <a routerLink="/register">Register</a>
     <a routerLink="/login">Login</a>
-    <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-          </a> -->
   </div>
 </div>
-
+<mat-toolbar color="primary" class="topnav">
+  <div>
+    <a routerLink="/home" class="active">Home</a>
+    <a routerLink="/register">Register</a>
+    <a routerLink="/login">Login</a>
+  </div>
+</mat-toolbar>
 <router-outlet></router-outlet>
