Added login form

--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/app.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/app.component.html
@@ -1,11 +1,4 @@
-<div class="content" role="main">
-  <div class="topnav" id="myTopnav">
-    <a routerLink="/home" class="active">Home</a>
-    <a routerLink="/register">Register</a>
-    <a routerLink="/login">Login</a>
-  </div>
-</div>
-<mat-toolbar color="primary" class="topnav">
+<mat-toolbar color="warn" class="topnav">
   <div>
     <a routerLink="/home" class="active">Home</a>
     <a routerLink="/register">Register</a>
