--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/login/login.component.css
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/login/login.component.css
@@ -1,6 +1,4 @@
 body {
-  /* "Cinemagraph by reddit user u/Sun_Beams
-      Source stock video by Videvo." (gained permission for personal usage)*/
   background-image: url("https://images.unsplash.com/photo-1524863479829-916d8e77f114?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
   background-size: cover;
   font-family: Tahoma;
@@ -19,25 +17,25 @@ body {
 
   grid-template-areas:
     ". . . . . ."
-    ". div1 div1 div1 div1 ."
-    ". div2 div2 div2 div2 ."
+    ". . div1 div1 . ."
+    ". . div1 div1 . ."
     ". . . . . .";
 }
 
 @media screen and (min-width: 1000px) {
   .parent {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(8, 1fr);
     grid-auto-rows: minmax(100px, auto);
     grid-column-gap: 80px;
     grid-row-gap: 30px;
 
     grid-template-areas:
-      ". . . . . ."
-      ". . . . . ."
-      ". div1 div1 div2 div2 ."
-      ". div1 div1 div2 div2 ."
-      ". . . . . .";
+      ". . . . . . . ."
+      ". . . div1 div1 . . ."
+      ". . . div1 div1 . . ."
+      ". . . div1 div1 . . ."
+      ". . . . . . . .";
   }
 }
 
@@ -52,7 +50,7 @@ body {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  border-radius: 2px; /* 5px rounded corners */
+  border-radius: 4px; /* 5px rounded corners */
   background: white;
 
   margin-bottom: 12px;
@@ -110,4 +108,21 @@ a:active {
 /* Add some padding inside the card container */
 .container {
   padding: 2px 16px;
+}
+
+.login-wrapper .full-width,
+.login-wrapper .btn-block {
+  width: 100%;
+}
+
+.mat-stroked-button {
+  border: 1px solid currentColor;
+  line-height: 54px;
+  background: #fff7fa;
+}
+
+mat-card-header {
+  text-align: center;
+  width: 100%;
+  display: block;
 }
