--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/login/login.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/login/login.component.html
@@ -1,1 +1,31 @@
-<p>login works!</p>
+<!-- inspired by https://www.positronx.io/create-login-ui-template-with-angular-8-material-design/ -->
+<body>
+  <div class="parent">
+    <div class="div1">
+      <div class="card">
+        <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
+          <mat-card class="box">
+            <mat-card-header>
+              <mat-card-title class="card-title">Log in</mat-card-title>
+            </mat-card-header>
+
+            <form class="example-form">
+              <mat-card-content>
+                <mat-form-field class="full-width">
+                  <input matInput placeholder="Username" />
+                </mat-form-field>
+
+                <mat-form-field class="full-width">
+                  <input matInput placeholder="Password" />
+                </mat-form-field>
+              </mat-card-content>
+              <button mat-stroked-button color="primary" class="btn-block">
+                Log in
+              </button>
+            </form>
+          </mat-card>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
