changed styles, added background toolbar, login done, registration fields missing and routing to backend

--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/app.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="warn" class="topnav">
+<mat-toolbar color="primary" style="height: 40px;" class="topnav">
   <div>
     <a routerLink="/home" class="active">Home</a>
     <a routerLink="/register">Register</a>
