--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/register/register.component.css
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/register/register.component.css
@@ -7,7 +7,6 @@ body {
   margin: 0;
   background-attachment: fixed;
 }
-
 .parent {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -17,8 +16,8 @@ body {
 
   grid-template-areas:
     ". . . . . ."
-    ". div1 div1 div1 div1 ."
-    ". div2 div1 div1 div1 ."
+    ". . div1 div1 . ."
+    ". . div1 div1 . ."
     ". . . . . .";
 }
 
@@ -52,7 +51,9 @@ body {
 
   margin-bottom: 12px;
   margin-right: 20px;
+
   padding: 20px;
+  text-align: center;
 }
 
 .card-title {
@@ -62,40 +63,12 @@ body {
   color: #004562;
   margin-bottom: 20px;
   margin-top: 15px;
-  text-align: center;
 }
 
 .card-body {
-  font-family: Tahoma;
-  font-size: 16px;
+  font-family: "Comic Sans MS";
   color: #5d6f7d;
-  padding-bottom: 40px;
-}
-
-.card-link {
-  font-family: Tahoma;
-  font-size: 16px;
-  color: #004562;
-  padding-bottom: 40px;
-  text-align: center;
-}
-
-a:visited {
-  text-decoration: none;
-  color: #004562;
-}
-a:hover {
-  text-decoration: none;
-  color: #71a1b8;
-}
-a:focus {
-  text-decoration: none;
-  color: #004562;
-}
-a:hover,
-a:active {
-  text-decoration: none;
-  color: #004562;
+  padding-bottom: 15px;
 }
 
 /* On mouse-over, add a deeper shadow */
@@ -106,4 +79,22 @@ a:active {
 /* Add some padding inside the card container */
 .container {
   padding: 2px 16px;
+}
+
+.login-wrapper .full-width,
+.login-wrapper .btn-block {
+  width: 100%;
+}
+
+.mat-stroked-button {
+  border: 1px solid currentColor;
+  font-family: Tahoma;
+  line-height: 54px;
+  background: #fff7fa;
+}
+
+mat-card-header {
+  text-align: center;
+  width: 100%;
+  display: block;
 }
