--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/login/login.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/login/login.component.html
@@ -6,20 +6,20 @@
         <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
           <mat-card class="box">
             <mat-card-header>
-              <mat-card-title class="card-title">Log in</mat-card-title>
+              <mat-card-title class="card-title">Welcome back!</mat-card-title>
             </mat-card-header>
 
             <form class="example-form">
               <mat-card-content>
                 <mat-form-field class="full-width">
-                  <input matInput placeholder="Username" />
+                  <input matInput placeholder="Username" type="text" />
                 </mat-form-field>
 
                 <mat-form-field class="full-width">
-                  <input matInput placeholder="Password" />
+                  <input matInput placeholder="Password" type="password" />
                 </mat-form-field>
               </mat-card-content>
-              <button mat-stroked-button color="primary" class="btn-block">
+              <button mat-stroked-button color="accent" class="btn-block">
                 Log in
               </button>
             </form>
