--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/register/register.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/register/register.component.html
@@ -1,22 +1,31 @@
+<!-- inspired by https://www.positronx.io/create-login-ui-template-with-angular-8-material-design/ -->
 <body>
   <div class="parent">
     <div class="div1">
       <div class="card">
-        <div class="card-title">Registration</div>
-        <div class="card-body">
-          <form>
-            Full name:<br />
-            <input type="text" name="name" required /><br />
-            Email:<br />
-            <input type="e" name="name" required /><br />
-            Password:<br />
-            <input type="password" name="name" required /><br />
-          </form>
-        </div>
-        <div class="card-link">
-          <a routerLink="/login">
-            <i class="fas fa-chevron-circle-right"></i> Click here to login
-          </a>
+        <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
+          <mat-card class="box">
+            <mat-card-header>
+              <mat-card-title class="card-title">
+                Create a new account
+              </mat-card-title>
+            </mat-card-header>
+
+            <form class="example-form">
+              <mat-card-content>
+                <mat-form-field class="full-width">
+                  <input matInput placeholder="Username" type="text" />
+                </mat-form-field>
+
+                <mat-form-field class="full-width">
+                  <input matInput placeholder="Password" type="password" />
+                </mat-form-field>
+              </mat-card-content>
+              <button mat-stroked-button color="accent" class="btn-block">
+                Log in
+              </button>
+            </form>
+          </mat-card>
         </div>
       </div>
     </div>
