--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/custom-theme.scss
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/custom-theme.scss
@@ -11,8 +11,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$fitness-frontend-primary: mat-palette($mat-indigo);
-$fitness-frontend-accent: mat-palette($mat-pink, A200, A100, A400);
+$fitness-frontend-primary: mat-palette($mat-blue-grey);
+$fitness-frontend-accent: mat-palette($mat-teal);
 
 // The warn palette is optional (defaults to red).
 $fitness-frontend-warn: mat-palette($mat-red);
