--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/login/login.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/login/login.component.html
@@ -12,14 +12,33 @@
             <form class="example-form">
               <mat-card-content>
                 <mat-form-field class="full-width">
-                  <input matInput placeholder="Username" type="text" />
+                  <input
+                    [(ngModel)]="loginUserData.email"
+                    matInput
+                    placeholder="Email"
+                    name="email"
+                    type="email"
+                    required
+                  />
                 </mat-form-field>
 
                 <mat-form-field class="full-width">
-                  <input matInput placeholder="Password" type="password" />
+                  <input
+                    [(ngModel)]="loginUserData.password"
+                    name="password"
+                    matInput
+                    placeholder="Password"
+                    type="password"
+                    required
+                  />
                 </mat-form-field>
               </mat-card-content>
-              <button mat-stroked-button color="accent" class="btn-block">
+              <button
+                (click)="loginUser()"
+                mat-stroked-button
+                color="accent"
+                class="btn-block"
+              >
                 Log in
               </button>
             </form>
