--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/register/register.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/register/register.component.html
@@ -14,15 +14,45 @@
             <form class="example-form">
               <mat-card-content>
                 <mat-form-field class="full-width">
-                  <input matInput placeholder="Username" type="text" />
+                  <input
+                    [(ngModel)]="registerUserData.name"
+                    name="name"
+                    matInput
+                    placeholder="Full Name"
+                    type="text"
+                    required
+                  />
+                </mat-form-field>
+                <mat-form-field class="full-width">
+                  <input
+                    [(ngModel)]="registerUserData.email"
+                    name="email"
+                    matInput
+                    placeholder="E-mail"
+                    type="email"
+                    required
+                  />
                 </mat-form-field>
 
                 <mat-form-field class="full-width">
-                  <input matInput placeholder="Password" type="password" />
+                  <input
+                    [(ngModel)]="registerUserData.password"
+                    name="password"
+                    matInput
+                    placeholder="Password"
+                    type="password"
+                    required
+                  />
                 </mat-form-field>
               </mat-card-content>
-              <button mat-stroked-button color="accent" class="btn-block">
-                Log in
+              <button
+                (click)="registerUser()"
+                mat-stroked-button
+                color="accent"
+                class="btn-block"
+                routerLink="/login"
+              >
+                Register
               </button>
             </form>
           </mat-card>
