--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/components/home/home.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/components/home/home.component.html
@@ -18,7 +18,7 @@
           Welcome back! Click here to create a new workout<br /><br />
         </div>
         <div class="card-link">
-          <a routerLink="/login">
+          <a routerLink="/createworkout">
             <i class="fas fa-chevron-circle-right"></i> Click here to create a
             new workout
           </a>
