--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/components/login/login.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/components/login/login.component.html
@@ -14,13 +14,17 @@
                 <mat-form-field class="full-width">
                   <input
                     [(ngModel)]="loginUserData.email"
+                    [formControl]="email"
                     matInput
                     placeholder="Email"
                     name="email"
                     type="email"
                     required
                   />
-                </mat-form-field>
+                  <mat-error *ngIf="email.invalid">{{
+                    getErrorMessage()
+                  }}</mat-error> </mat-form-field
+                ><br />
 
                 <mat-form-field class="full-width">
                   <input
