create workout form

--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/components/home/home.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/components/home/home.component.html
@@ -33,7 +33,7 @@
           Workouts can vary from skateboarding to running!
         </div>
         <div class="card-link">
-          <a routerLink="/home">
+          <a routerLink="/allworkouts">
             <i class="fas fa-chevron-circle-right"></i> Click here to view them
           </a>
         </div>
