--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/components/create-workout/create-workout.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/components/create-workout/create-workout.component.html
@@ -1,70 +1,198 @@
-<!--<form [formGroup]="formGroup">-->
+<!-- inspired by https://stackblitz.com/edit/deep-nested-reactive-form?file=app%2Fapp.component.html -->
+<!-- <body>
+  <div class="parent">
+    <div class="div1">
+      <div class="card">
+        <div class="login-wrapper">
+          <mat-card>
+            <mat-card-header>
+              <mat-card-title class="card-title">New workout</mat-card-title>
+            </mat-card-header>
+            <form
+              [formGroup]="workoutForm"
+              novalidate
+              (ngSubmit)="onSubmit(workoutForm)"
+            >
+              <mat-card-content>
+                <mat-form-field class="full-width">
+                  <input type="text" formControlName="workoutName" required />
+                </mat-form-field>
+              </mat-card-content>
+              <div>
+                Workout Name:<input
+                  type="text"
+                  formControlName="workoutName"
+                  required
+                />
+              </div>
+              <div formArrayName="exercises">
+                <div
+                  class="exercise-container"
+                  *ngFor="
+                    let exercise of getExercises(workoutForm);
+                    let i = index
+                  "
+                >
+                  <div class="card" [formGroupName]="i">
+                    <h4 class="card-title">Exercise details</h4>
+                    <div>
+                      exercise name:<input
+                        type="text"
+                        formControlName="exerciseName"
+                        required
+                      />
+                    </div>
+                    <div>
+                      Your description<input
+                        type="text"
+                        formControlName="description"
+                        required
+                      />
+                    </div>
+                    <div>
+                      set:<input type="text" formControlName="set" required />
+                    </div>
+                    <div>
+                      reps:<input type="text" formControlName="reps" required />
+                    </div>
+                  </div>
+                </div>
+                <button (click)="addExercise()" class="point">
+                  Add another exercise
+                </button>
+              </div>
+              <button type="submit">Submit</button>
+            </form>
+          </mat-card>
+        </div>
+      </div>
+    </div>
+  </div>
+</body> -->
 
-<!--<div class="wrapper">-->
+<body>
+  <div class="parent">
+    <div class="div1">
+      <div class="card">
+        <div class="login-wrapper">
+          <form
+            [formGroup]="workoutForm"
+            novalidate
+            (ngSubmit)="onSubmit(workoutForm)"
+          >
+            <mat-card>
+              <mat-card-header>
+                <mat-card-title class="card-title"
+                  >Create a new workout</mat-card-title
+                >
+              </mat-card-header>
 
-<!--<h1 mat-dialog-title>Create Post</h1>-->
+              <mat-card-content>
+                <mat-form-field class="full-width">
+                  <input
+                    input
+                    type="text"
+                    formControlName="workoutName"
+                    matInput
+                    placeholder="Your workout name"
+                    name="workoutName"
+                    type="text"
+                    required
+                  /> </mat-form-field
+                ><br />
+              </mat-card-content>
+            </mat-card>
 
-<!--<mat-dialog-content>-->
+            <mat-card>
+              <mat-card-header>
+                <mat-card-title class="card-title"
+                  >Exercise details</mat-card-title
+                >
+              </mat-card-header>
+              <div
+                class="exercise-container"
+                *ngFor="
+                  let exercise of getExercises(workoutForm);
+                  let i = index
+                "
+              >
+                <div class="card" [formGroupName]="i"></div>
 
-<!--<mat-tab-group #tabGroup-->
-<!--disableRipple="true"-->
-<!--(selectedIndexChange)="selectedIndexChange($event)"-->
-<!--[dynamicHeight]="true">-->
+                <mat-card-content>
+                  <mat-form-field class="full-width">
+                    <input
+                      input
+                      type="text"
+                      formControlName="exerciseName"
+                      matInput
+                      placeholder="new exercise name"
+                      name="exerciseName"
+                      type="text"
+                      required
+                    />
+                  </mat-form-field>
 
-<!--<mat-tab *ngFor="let tab of postService.tabs; let i = index">-->
+                  <mat-form-field class="full-width">
+                    <input
+                      input
+                      type="text"
+                      formControlName="description"
+                      matInput
+                      placeholder="description"
+                      name="description"
+                      type="text"
+                      required
+                    />
+                  </mat-form-field>
 
-<!--<ng-template mat-tab-label>-->
+                  <mat-form-field class="full-width">
+                    <input
+                      input
+                      type="text"
+                      formControlName="set"
+                      matInput
+                      placeholder="exercise sets"
+                      name="set"
+                      type="text"
+                      required
+                    />
+                  </mat-form-field>
 
-<!--<app-post-tab-label [label]="tab.label"-->
-<!--[autoFocus]="tab.autoFocus"-->
-<!--[index]="i"></app-post-tab-label>-->
+                  <mat-form-field class="full-width">
+                    <input
+                      input
+                      type="text"
+                      formControlName="reps"
+                      matInput
+                      placeholder="exercise reps"
+                      name="reps"
+                      type="text"
+                      required
+                    />
+                  </mat-form-field>
+                </mat-card-content>
+              </div>
+            </mat-card>
+            <button
+              (click)="addExercise()"
+              mat-stroked-button
+              color="accent"
+              class="btn-block"
+            >
+              add another exercise
+            </button>
 
-<!--</ng-template>-->
-
-<!--</mat-tab>-->
-
-<!--</mat-tab-group>-->
-
-<!--<monaco-editor theme="vs-dark"-->
-<!--(fileChange)="editorChange($event)"-->
-<!--[options]="monacoOptions"></monaco-editor>-->
-
-<!--</mat-dialog-content>-->
-
-<!--<mat-dialog-actions>-->
-
-<!--<div class="left">-->
-
-<!--<mat-form-field>-->
-
-<!--<mat-select formControlName="visibility"-->
-<!--placeholder="Visibility">-->
-
-<!--<mat-option value="public" selected>Public</mat-option>-->
-<!--<mat-option value="private">Private</mat-option>-->
-
-<!--</mat-select>-->
-
-<!--</mat-form-field>-->
-
-<!--</div>-->
-
-<!--<div class="right">-->
-
-<!--<button mat-button mat-dialog-close>Cancel</button>-->
-
-<!--<button mat-button-->
-<!--(click)="post()"-->
-<!--cdkFocusInitial>-->
-
-<!--Post-->
-
-<!--</button>-->
-
-<!--</div>-->
-
-<!--</mat-dialog-actions>-->
-
-<!--</div>-->
-
-<!--</form>-->
+            <button
+              color="primary"
+              mat-stroked-button
+              class="btn-block"
+              type="submit"
+            >
+              Submit
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
