--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/components/login/login.component.html
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/components/login/login.component.html
@@ -3,13 +3,13 @@
   <div class="parent">
     <div class="div1">
       <div class="card">
-        <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
-          <mat-card class="box">
+        <div class="login-wrapper">
+          <mat-card>
             <mat-card-header>
               <mat-card-title class="card-title">Welcome back!</mat-card-title>
             </mat-card-header>
 
-            <form class="example-form">
+            <form>
               <mat-card-content>
                 <mat-form-field class="full-width">
                   <input
