--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/components/all-workouts/all-workouts.component.css
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/components/all-workouts/all-workouts.component.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://images.unsplash.com/photo-1524863479829-916d8e77f114?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+  background-color: url("https://images.unsplash.com/photo-1526401485004-46910ecc8e51?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
   background-size: cover;
   font-family: Tahoma;
   height: 100vh;
@@ -42,6 +42,24 @@ body {
   grid-area: div1;
 }
 
+.card-title {
+  font-family: "Glegoo", serif;
+  font-weight: 700;
+  font-size: 24px;
+  color: #004562;
+  margin-bottom: 20px;
+  margin-top: 15px;
+  text-align: center;
+}
+
+.card-body {
+  font-family: "Tahoma";
+  color: #5d6f7d;
+  padding-bottom: 15px;
+}
+
 mat-card {
   margin-top: 20px;
+  text-align: center;
+  padding: 20px;
 }
