--- a/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/components/create-workout/create-workout.component.css
+++ b/ITWEB-Fitness-app/Frontend/fitness-frontend/src/app/components/create-workout/create-workout.component.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://images.unsplash.com/photo-1524863479829-916d8e77f114?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+  background-image: url("https://images.unsplash.com/photo-1499290572571-a48c08140a19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1490&q=80");
   background-size: cover;
   font-family: Tahoma;
   height: 100vh;
@@ -65,7 +65,7 @@ body {
 }
 
 .card-body {
-  font-family: "Comic Sans MS";
+  font-family: "Tahoma";
   color: #5d6f7d;
   padding-bottom: 15px;
 }
